# Prusa-Firmware-Buddy

./: .gitmodules  CMakeLists.txt
include/: lwipopts.h
include/device/stm32f4/device/: peripherals.h
lib/Marlin/Marlin/src/feature/: twibus.cpp  twibus.h
lib/Marlin/Marlin/src/gcode/feature/i2c/: M260_M261.cpp
lib/WUI/: wui.c
src/common/: TCA6408A.hpp  c_wui_api.c  eeprom.c  eeprom.h  hwio_pindef.h  hwio_pindef_XL.h  ini_handler.c  ini_handler.h  wui_api.c  wui_api.h
src/common/crash_dump/: dump.cpp
src/device/stm32f4/: peripherals.cpp
src/gui/: menu_vars.cpp  screen_lan_settings.c  screen_lan_settings.h  screen_menu_settings.c  window_header.c
src/guiapi/include/: guitypes.h  window_icon.hpp
src/guiapi/src/: display_helper.cpp  window_icon.cpp
src/marlin_stubs/pause/: pause_settings.cpp
src/wui/: CMakeLists.txt  ethvars.h  lwip.c  lwip.h  lwipopts.h  netif_settings.c  netif_settings.h  netvars.h  sntp_handle.c  sntp_handle.h  sntp_handler.c  sntp_handler.h  wui.c  wui.h  wui_REST_api.c  wui_REST_api.h  wui_api.c  wui_api.h  wui_custom_api.h  wui_eeprom_api.c  wui_eeprom_api.h  wui_helper_funcs.c  wui_helper_funcs.h  wui_request_parser.c  wui_request_parser.h
src/wui/http/: http_client.c  http_client.h  httpd.c
src/wui/sntp/: sntp_client.c  sntp_client.h
utils/test_http_server/: connect.py  connect_test_funcs.py  http_server.py  http_server_test_funcs.py
utils/test_http_server/connect_tests/: tests.json
utils/test_http_server/server_tests/: notes.txt  tests.json
